--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -134,10 +134,6 @@
                                         </a> &nbsp;&nbsp;
 
                                         <% } %>
-
-                                            <a href="/blog/page/<%= next_page %>">
-                                                下一頁
-                                            </a> &nbsp;&nbsp;
                                 </ul>
                             </div>
                             </a>
@@ -317,15 +313,15 @@
                     })
                 </script>
                 <script>$(document).ready(function () {
-                        let a='' ;
-                            $('#floatingInput').on('change', function () {
-                                a = $('#floatingInput').val();
-                            });
-                        $('#searchBTN').on('click', function (e) {
-                            e.preventDefault();
-                            window.location.href = `/blog/search1/${a}`;
-                        // console.log(a);
-                        });
+                let searchput = '';
+                $('#floatingInput').on('change', function () {
+                    searchput = $('#floatingInput').val();
+                });
+                $('#searchBTN').on('click', function (e) {
+                    e.preventDefault();
+                    window.location.href = `/blog/search1/${searchput}`;
+                    // console.log(a);
+                });
 
                         var itemTag = [];
                         fetch('/blog/tags')
@@ -372,50 +368,8 @@
                         let sqlQuery = 'SELECT * FROM `article` WHERE ';
                         $('#tagschBtn').on('click', function () {
                             window.location.href = `/blog/search/${ict}&${notag}`;
-                            // $('#tagschBtn').prop('href', `blog/search/in_${ict}&no_${notag}`);
-                            // console.log(includeTag, nocludeTag);
-                            if (includeTag.length > 0) {
-                                // sqlQuery += '(';
-                                for (let i = 0; i < includeTag.length; i++) {
-                                    sqlQuery += 'atTag LIKE \'%' + includeTag[i] + '%\'';
-                                    if (i < includeTag.length - 1) {
-                                        sqlQuery += ' AND ';
-                                    }
-                                }
-                                // sqlQuery += ')';
-                            }
-                            // 添加排除标签的条件
-                            if (nocludeTag.length > 0) {
-                                if (includeTag.length > 0) {
-                                    sqlQuery += ' AND ';
-                                }
-                                // sqlQuery += '(';
-                                for (let i = 0; i < nocludeTag.length; i++) {
-                                    sqlQuery += 'atTag NOT LIKE \'%' + nocludeTag[i] + '%\'';
-                                    if (i < nocludeTag.length - 1) {
-                                        sqlQuery += ' AND ';
-                                    }
-                                }
-                                // sqlQuery += ')';
-                            }
-                            // console.log('构建的SQL查询:', sqlQuery);
-                            var tagData = {};
-                            tagData.search = sqlQuery;
-                            var jsonData = JSON.stringify(tagData);
-                            console.log(jsonData);
-                            fetch('/blog/search', {
-                                body: jsonData
-                            })
-                                .then(function (res) {
-                                    console.log(res);
-                                })
                         })
                     });
-
-
-
-                    // 添加包含标签的条件
-
                 </script>
 </body>
 
