--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -61,8 +61,8 @@
                                         <div class="articleIcon">
                                             <a>
                                                 <div class="con-like">
-                                                    <input title="like" type="checkbox" class="like check1">
-                                                    <div class="checkmark">
+                                                    <input title="like" type="checkbox" class="like check1" id="likeBTN<%- data[i].atcid %>">
+                                                    <div class="checkmark"  id="likeIcon<%- data[i].atcid %>">
                                                         <svg viewBox="0 0 24 24" class="outline"
                                                             xmlns="http://www.w3.org/2000/svg">
                                                             <path
@@ -90,8 +90,9 @@
                                             <p class="likePeople" style="margin-left: -12px; padding: 3px;"></p>
                                             <a>
                                                 <div class="con-like con-keep">
-                                                    <input title="like" type="checkbox" class="like keep1">
-                                                    <div class="checkmark">
+                                                    <input title="like" type="checkbox" class="like keep1"
+                                                        id="keepBTN<%- data[i].atcid %>">
+                                                    <div class="checkmark" id="bookmark<%- data[i].atcid %>">
                                                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                                                             width="35px" height="35px" viewBox="0 0 24 24"
                                                             class="outline">
@@ -249,6 +250,103 @@
                 <script src="js/blogact.js"></script>
                 <script src="js/selectivity-jquery.min.js"></script>
                 <script>
+                    function getBookmark() {
+                        fetch('/blog/bookmark')
+                            .then(function (res) {
+                                return res.json();
+                            })
+                            .then(function (jsonObj) {
+                                if (jsonObj.length != 0) {
+                                    for (let i = 0; i < jsonObj.length; i++) {
+                                        $(`#bookmark${jsonObj[i].atcid} svg:nth-child(2)`).css('display', 'block');
+                                    }
+                                }
+                            })
+                    }
+                    getBookmark();
+                    function getLiked() {
+                        fetch('/blog/likeList')
+                            .then(function (res) {
+                                return res.json();
+                            })
+                            .then(function (jsonObj) {
+                                if (jsonObj.length != 0) {
+                                    for (let i = 0; i < jsonObj.length; i++) {
+                                        $(`#likeIcon${jsonObj[i].atcid} svg:nth-child(2)`).css('display', 'block');
+                                    }
+                                }
+                            })
+                    }
+                    getLiked();
+
+                    $('.keep1').on('click', function (e) {
+                            var userData = localStorage.getItem("token");
+                            var userToken = userData ? JSON.parse(userData) : false;
+                            if (userToken == false) {
+                                alert('請登入');
+                            } else {
+                                var keepData = {};
+                                var pn = e.target.id.substring(7);
+                                keepData.atcid = pn;
+                                keepData.uid = userToken.id;
+                                var jsonData = JSON.stringify(keepData);
+                                fetch('/blog/keepcheck', {
+                                    method: "POST",
+                                    headers: {
+                                        "Content-type": "application/json;charset=UTF-8"
+                                    },
+                                    body: jsonData
+                                })
+                                    .then(function (res) {
+                                        Swal.fire({
+                                            position: 'center',
+                                            icon: 'success',
+                                            title: '已加入收藏夾',
+                                            showConfirmButton: false,
+                                            timer: 1500
+                                        });
+                                        $(`#bookmark${pn} svg:nth-child(2)`).css('display', 'block');
+                                    })
+                               
+                            }
+                        // }
+                    });
+                    $('.check1').on('click', function (e) {
+                            var userData = localStorage.getItem("token");
+                            var userToken = userData ? JSON.parse(userData) : false;
+                            var pn = e.target.id.substring(7);
+                            if (userToken == false) {
+                                alert('請登入');
+                                $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
+                            } else {
+                                var keepData = {};
+                                keepData.atcid = pn;
+                                keepData.uid = userToken.id;
+                                var jsonData = JSON.stringify(keepData);
+                                fetch('/blog/likearticle', {
+                                    method: "POST",
+                                    headers: {
+                                        "Content-type": "application/json;charset=UTF-8"
+                                    },
+                                    body: jsonData
+                                })
+                                    .then(function (res) {
+                                        Swal.fire({
+                                            position: 'center',
+                                            icon: 'success',
+                                            title: '已按讚',
+                                            showConfirmButton: false,
+                                            timer: 1500
+                                        });
+                                        $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
+                                    })
+                               
+                            }
+                        // }
+                    });
+                    
+
+
                     var a = <%= curr_page %>;
                     $(`.pageset>a:nth-child(${a})`).css('border-bottom', 'rgb(31, 2, 2) solid 2px');
 
@@ -313,15 +411,15 @@
                     })
                 </script>
                 <script>$(document).ready(function () {
-                let searchput = '';
-                $('#floatingInput').on('change', function () {
-                    searchput = $('#floatingInput').val();
-                });
-                $('#searchBTN').on('click', function (e) {
-                    e.preventDefault();
-                    window.location.href = `/blog/search1/${searchput}`;
-                    // console.log(a);
-                });
+                        let searchput = '';
+                        $('#floatingInput').on('change', function () {
+                            searchput = $('#floatingInput').val();
+                        });
+                        $('#searchBTN').on('click', function (e) {
+                            e.preventDefault();
+                            window.location.href = `/blog/search1/${searchput}`;
+                            // console.log(a);
+                        });
 
                         var itemTag = [];
                         fetch('/blog/tags')
