--- a/views/share/header.ejs
+++ b/views/share/header.ejs
@@ -1,7 +1,7 @@
 <nav id="main-nav">
-  <span id="userName" class="vg-ps">user</span>
+  <span id="userName" class="vg-ps"></span>
   <button id="logoutBTN" class="btn btn-vg-sm">登出</button>
-  <a href="/member" class="icon" id="navUser">
+  <a href="#" class="icon" id="navUser">
     <i class="fa-solid fa-user"></i>
   </a>
   <a href="#" class="icon cart-button" id="navCart">
@@ -73,7 +73,7 @@
 </aside>
 <div id="sidebar-cart-curtain"></div>
 <div class="vg-nav" id="vg-navbar">
-  <a href="/" class="vg-nav-logo"><img src="img/vegeLogo.png" class="img-fluid" style="height: 40px;"></a>
+  <a href="/" class="vg-nav-logo"><img src="img/vegeLogo.png" alt="vegeLogo"></a>
   <a href="/about" class="btn-vg-2">關於我們</a>
   <a href="/activityboard" class="btn-vg-2">最新消息</a>
   <a href="/product" class="btn-vg-2">產品資訊</a>
