--- a/views/share/m_green_header.ejs
+++ b/views/share/m_green_header.ejs
@@ -1,7 +1,7 @@
 <nav class="green" id="main-nav">
-  <span id="userName" class="vg-ps">user</span>
-  <button id="logoutBTN" class="btn btn-vg-sm">登出</button>
-  <a href="/member" class="icon green" id="navUser">
+  <span id="userName" class="vg-ps green"></span>
+  <button id="logoutBTN" class="btn btn-vg-sm green">登出</button>
+  <a href="#" class="icon green" id="navUser">
     <i class="fa-solid fa-user"></i>
   </a>
   <a href="#" class="icon cart-button green" id="navCart">
@@ -73,7 +73,7 @@
 </aside>
 <div id="sidebar-cart-curtain"></div>
 <div class="vg-nav change green" id="vg-navbar">
-  <a href="/" class="vg-nav-logo btn-vg-2-active">LOGO</a>
+  <a href="/" class="vg-nav-logo"><img src="img/vegeLogo.png" alt="vegeLogo"></a>
   <a href="/about" class="btn-vg-2 green">關於我們</a>
   <a href="/activityboard" class="btn-vg-2 green">最新消息</a>
   <a href="/product" class="btn-vg-2 green">產品資訊</a>
