0915雅筑更新v幾

--- a/views/activityboard.ejs
+++ b/views/activityboard.ejs
@@ -308,6 +308,7 @@
             </div>
             <%- include('share/footer.ejs')%>
                 <script>
+                    //導覽列設置
                     $('#qna').addClass('btn-vg-2-active');
                     $('#title1').text('全部分類');
                     $('#title1').prop('href', '/activityboard');
@@ -351,8 +352,9 @@
                 </script>
                 <script src="js/blogact.js"></script>
                 <script src="js/selectivity-jquery.min.js"></script>
-                <script>
 
+                <script>
+                    //輪盤設置
                     // 假設您已經有了輪盤的初始角度和旋轉速度
                     let initialAngle = 0; // 輪盤的初始角度
                     let rotationSpeed = 3; // 旋轉速度，設置為3秒
