--- a/views/activityboard_inside.ejs
+++ b/views/activityboard_inside.ejs
@@ -300,7 +300,7 @@
                 <script src="js/selectivity-jquery.min.js"></script>
 
                 <script>
-
+                    //輪盤設置
                     // 假設您已經有了輪盤的初始角度和旋轉速度
                     let initialAngle = 0; // 輪盤的初始角度
                     let rotationSpeed = 3; // 旋轉速度，設置為3秒
@@ -369,7 +369,7 @@
                             })
 
                     }
-
+                    //導覽列設置
 
                     $('#qna').addClass('btn-vg-2-active');
                     $('#title1').text('全部分類');
