--- a/lib/css/blog.css
+++ b/lib/css/blog.css
@@ -13,11 +13,6 @@
 }
 
 
-.header {
-    background-color: rgba(153, 245, 188, 0.535);
-    padding: 20px;
-}
-
 /* navbar */
 .myNavbar>ul {
     list-style: none;
@@ -390,7 +385,7 @@ padding-left: 50px;
     white-space: nowrap;
 }
 
-.form-control {
+.textin {
     height: 100px;
 }
 
