--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -61,8 +61,9 @@
                                         <div class="articleIcon">
                                             <a>
                                                 <div class="con-like">
-                                                    <input title="like" type="checkbox" class="like check1" id="likeBTN<%- data[i].atcid %>">
-                                                    <div class="checkmark"  id="likeIcon<%- data[i].atcid %>">
+                                                    <input title="like" type="checkbox" class="like check1"
+                                                        id="likeBTN<%- data[i].atcid %>">
+                                                    <div class="checkmark" id="likeIcon<%- data[i].atcid %>">
                                                         <svg viewBox="0 0 24 24" class="outline"
                                                             xmlns="http://www.w3.org/2000/svg">
                                                             <path
@@ -147,7 +148,7 @@
                     <!-- search -->
                     <div class="d-flex m-3 searchRow">
                         <div class="form-floating mb-3 w-75">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="搜尋">
+                            <input type="text" class="form-control textin" id="floatingInput" placeholder="搜尋">
                             <label for="floatingInput">搜尋</label>
                         </div>
                         <button id="searchBTN" class="btn btn-vg serchButton"><i class="bi bi-search"></i></button>
@@ -165,7 +166,7 @@
                                 tabindex="0">
                                 <div class="selectivity-multiple-input-container form-floating">
                                     <input type="text" autocomplete="off" autocorrect="off" autocapitalize="off"
-                                        class="form-control selectivity-multiple-input" size="23">
+                                        class="form-control textin selectivity-multiple-input" size="23">
                                     <div class="selectivity-clearfix"></div>
 
                                 </div>
@@ -177,7 +178,7 @@
                                 tabindex="0">
                                 <div class="selectivity-multiple-input-container form-floating">
                                     <input type="text" autocomplete="off" autocorrect="off" autocapitalize="off"
-                                        class="form-control selectivity-multiple-input" size="23">
+                                        class="form-control textin selectivity-multiple-input" size="23">
                                     <div class="selectivity-clearfix"></div>
 
                                 </div>
@@ -250,6 +251,8 @@
                 <script src="js/blogact.js"></script>
                 <script src="js/selectivity-jquery.min.js"></script>
                 <script>
+
+                    //抓取會員是否已收藏
                     function getBookmark() {
                         fetch('/blog/bookmark')
                             .then(function (res) {
@@ -264,6 +267,7 @@
                             })
                     }
                     getBookmark();
+                    //抓取會員是否已按讚
                     function getLiked() {
                         fetch('/blog/likeList')
                             .then(function (res) {
@@ -279,77 +283,94 @@
                     }
                     getLiked();
 
+                    //收藏設定非會員需登入，會員加入資料庫且顯示實心icon
                     $('.keep1').on('click', function (e) {
-                            var userData = localStorage.getItem("token");
-                            var userToken = userData ? JSON.parse(userData) : false;
-                            if (userToken == false) {
-                                alert('請登入');
-                            } else {
-                                var keepData = {};
-                                var pn = e.target.id.substring(7);
-                                keepData.atcid = pn;
-                                keepData.uid = userToken.id;
-                                var jsonData = JSON.stringify(keepData);
-                                fetch('/blog/keepcheck', {
-                                    method: "POST",
-                                    headers: {
-                                        "Content-type": "application/json;charset=UTF-8"
-                                    },
-                                    body: jsonData
-                                })
-                                    .then(function (res) {
-                                        Swal.fire({
-                                            position: 'center',
-                                            icon: 'success',
-                                            title: '已加入收藏夾',
-                                            showConfirmButton: false,
-                                            timer: 1500
-                                        });
-                                        $(`#bookmark${pn} svg:nth-child(2)`).css('display', 'block');
-                                    })
-                               
-                            }
-                        // }
-                    });
-                    $('.check1').on('click', function (e) {
-                            var userData = localStorage.getItem("token");
-                            var userToken = userData ? JSON.parse(userData) : false;
+                        var userData = localStorage.getItem("token");
+                        var userToken = userData ? JSON.parse(userData) : false;
+                        if (userToken == false) {
+                            Swal.fire({
+                                title: '請先登入會員',
+                                icon: 'warning',
+                                showConfirmButton: false,
+                                timer: 1500
+                            });
+                        } else {
+                            var keepData = {};
                             var pn = e.target.id.substring(7);
-                            if (userToken == false) {
-                                alert('請登入');
-                                $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
-                            } else {
-                                var keepData = {};
-                                keepData.atcid = pn;
-                                keepData.uid = userToken.id;
-                                var jsonData = JSON.stringify(keepData);
-                                fetch('/blog/likearticle', {
-                                    method: "POST",
-                                    headers: {
-                                        "Content-type": "application/json;charset=UTF-8"
-                                    },
-                                    body: jsonData
+                            keepData.atcid = pn;
+                            keepData.uid = userToken.id;
+                            var jsonData = JSON.stringify(keepData);
+                            fetch('/blog/keepcheck', {
+                                method: "POST",
+                                headers: {
+                                    "Content-type": "application/json;charset=UTF-8"
+                                },
+                                body: jsonData
+                            })
+                                .then(function (res) {
+                                    Swal.fire({
+                                        position: 'center',
+                                        icon: 'success',
+                                        title: '已加入收藏夾',
+                                        showConfirmButton: false,
+                                        timer: 1500
+                                    });
+                                    $(`#bookmark${pn} svg:nth-child(2)`).css('display', 'block');
                                 })
-                                    .then(function (res) {
-                                        Swal.fire({
-                                            position: 'center',
-                                            icon: 'success',
-                                            title: '已按讚',
-                                            showConfirmButton: false,
-                                            timer: 1500
-                                        });
-                                        $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
-                                    })
-                               
-                            }
+
+                        }
                         // }
                     });
-                    
+                    //愛心設定非會員需登入，會員加入資料庫且顯示實心icon
+                    $('.check1').on('click', function (e) {
+                        let text = $(this).parent().parent().parent().find('p');
+                       let textPlus = $(this).parent().parent().parent().find('p').text();
+                        var userData = localStorage.getItem("token");
+                        var userToken = userData ? JSON.parse(userData) : false;
+                        var pn = e.target.id.substring(7);
+                        if (userToken == false) {
+                            Swal.fire({
+                                title: '請先登入會員',
+                                icon: 'warning',
+                                showConfirmButton: false,
+                                timer: 1500
+                            });
+                            $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
+                        } else {
+                            var keepData = {};
+                            keepData.atcid = pn;
+                            keepData.uid = userToken.id;
+                            var jsonData = JSON.stringify(keepData);
+                            fetch('/blog/likearticle', {
+                                method: "POST",
+                                headers: {
+                                    "Content-type": "application/json;charset=UTF-8"
+                                },
+                                body: jsonData
+                            })
+                                .then(function (res) {
+                                    Swal.fire({
+                                        position: 'center',
+                                        icon: 'success',
+                                        title: '已按讚',
+                                        showConfirmButton: false,
+                                        timer: 1500
+                                    });
+                                    $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
+                                    textPlus++;
+                                    text.text(textPlus);
+                                })
+
+                        }
+                        // }
+                    });
 
 
+                    //設定目前頁面下方畫線
                     var a = <%= curr_page %>;
                     $(`.pageset>a:nth-child(${a})`).css('border-bottom', 'rgb(31, 2, 2) solid 2px');
 
+                    //設定上方導覽列
                     $('#qna').addClass('btn-vg-2-active');
                     $('#title1').text('全部分類');
                     $('#title1').prop('href', '/blog/page/1');
@@ -411,6 +432,7 @@
                     })
                 </script>
                 <script>$(document).ready(function () {
+                        //抓取搜尋欄位值並跳轉網址頁面
                         let searchput = '';
                         $('#floatingInput').on('change', function () {
                             searchput = $('#floatingInput').val();
@@ -421,6 +443,7 @@
                             // console.log(a);
                         });
 
+                        //抓取含有此tag的文章
                         var itemTag = [];
                         fetch('/blog/tags')
                             .then(function (res) {
@@ -447,7 +470,7 @@
                                 }
                             })
 
-
+                        //設定進階搜尋的比對並將資料傳入js並跳轉網址
                         let includeTag = 0;
                         let ict;
                         $('#includetag').on('change', function () {
