--- a/views/rateorder.ejs
+++ b/views/rateorder.ejs
@@ -92,7 +92,7 @@
                                         });
                                         e.map((item) => {
                                             var spanHtml = `
-                                    <span class="rateitem">${item.pname}</span>
+                                    <span class="rateitem">${item.product}</span>
                                     `;
                                             $('#rateitems').append(spanHtml)
                                             // console.log(item.pname)
