葵更新小農連結

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -234,7 +234,7 @@
                       <i class="fa-solid fa-hand-holding-droplet me-3"></i>
                       <%= data[i].vegeType %>
                     </p>
-                    <a href="" class="btn btn-vg ms-auto mb-3">查看農友故事</a>
+                    <a href="/blog/inside/17" class="btn btn-vg ms-auto mb-3">查看農友故事</a>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
           <% } %>
         </div>
       </div>
-      <a id="openSGS" class="btn btn-vg-lg" style="cursor: pointer"
+      <a id="openSGS" class="btn btn-vg-lg" style="cursor: pointer" 
         >點此查看小農驗證報告</a
       >
     </section>
